Modify Side Bar

--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ contact: >
 
 # Pages shown in navbar
 nav_pages:
-  - name: about
+  # - name: about
   - name: publications
   - name: talks
   - name: research
