--- a/_data/news.yml
+++ b/_data/news.yml
@@ -4,3 +4,23 @@
 - date: 1 January, 1940
   headline: "Example news here"
 
+
+- date: 1 January, 1940
+  headline: "Example news here"
+
+- date: 1 January, 1940
+  headline: "Example news here"
+
+- date: 1 January, 1940
+  headline: "Example news here"
+- date: 1 January, 1940
+  headline: "Example news here"
+- date: 1 January, 1940
+  headline: "Example news here"
+- date: 1 January, 1940
+  headline: "Example news here"
+- date: 1 January, 1940
+  headline: "Example news here"
+- date: 1 January, 1940
+  headline: "Example news here"
+  
