--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Richard Feynman
-email: richard@university.edu
+title: Yale Theory Group
+# email: richard@university.edu
 description: Academic webpage of Dr. Richard Feynman
 baseurl: ""
 url: ""
@@ -11,19 +11,19 @@ url: ""
 # google_tag_manager: XXX
 
 # Footer info
-affiliation: >
-    Richard Feynman<br/>
-    Professor of Physics<br/>
-    California Institute of Technology
+# affiliation: >
+    # Richard Feynman<br/>
+    # Professor of Physics<br/>
+    # California Institute of Technology
 
-location: >
-  California Institute of Technology<br/>
-  1200 E California Blvd<br/>
-  Pasadena, CA 91125
+# location: >
+  # California Institute of Technology<br/>
+  # 1200 E California Blvd<br/>
+  # Pasadena, CA 91125
 
-contact: >
-    <a href="mailto:richard@university.edu" target="_blank"><i class="fa fa-envelope fa-1x"></i> Contact Richard via email</a> <br/>
-    <a href="https://github.com/sbryngelson/academic-website-template"><i class="fa fa-github fa-1x"></i> Use this site as a template!</a>
+# contact: >
+    # <a href="mailto:richard@university.edu" target="_blank"><i class="fa fa-envelope fa-1x"></i> Contact Richard via email</a> <br/>
+    # <a href="https://github.com/sbryngelson/academic-website-template"><i class="fa fa-github fa-1x"></i> Use this site as a template!</a>
 
 # Pages shown in navbar
 nav_pages:
@@ -32,7 +32,9 @@ nav_pages:
   - name: talks
   - name: research
   - name: software
-  - name: team
+  # - name: team
+  - name: faculty
+  - name: students
   - name: teaching
 
 include:
