--- a/_config.yml
+++ b/_config.yml
@@ -28,14 +28,14 @@ url: ""
 # Pages shown in navbar
 nav_pages:
   # - name: about
-  - name: publications
-  - name: talks
-  - name: research
-  - name: software
+  # - name: publications
+  # - name: talks
+  # - name: research
+  # - name: software
   # - name: team
   - name: faculty
   - name: students
-  - name: teaching
+  # - name: teaching
 
 include:
   - .htaccess
