--- a/_data/faculty.yml
+++ b/_data/faculty.yml
@@ -34,3 +34,13 @@
    and scientific computing
   email: daniel.spielman [at] yale.edu
   homepage: http://www.cs.yale.edu/homes/spielman/
+
+- name: NISHEETH K. VISHNOI
+  photo: nisheethvishnoiheadshot.png
+  info: A. Bartlett Giamatti Professor of Computer Science
+  interest: Theoretical Computer Science, Optimization, and Artificial Intelligence.
+  email: nisheeth.vishnoi [at] gmail.com  
+  homepage: http://www.cs.yale.edu/homes/vishnoi/Home.html
+
+
+
