--- a/_data/faculty.yml
+++ b/_data/faculty.yml
@@ -35,7 +35,7 @@
   email: daniel.spielman [at] yale.edu
   homepage: http://www.cs.yale.edu/homes/spielman/
 
-- name: NISHEETH K. VISHNOI
+- name: Nisheeth K. Vishnoi
   photo: nisheethvishnoiheadshot.png
   info: A. Bartlett Giamatti Professor of Computer Science
   interest: Theoretical Computer Science, Optimization, and Artificial Intelligence.
