add current students

--- a/_data/students.yml
+++ b/_data/students.yml
@@ -13,3 +13,13 @@
   photo: ArgyrisOikonomou.jpeg
   email: argyris.oikonomou@yale.edu
   homepage: https://aroikonomou.github.io/
+
+- name: Talley Amir
+  photo: talleyamir.jpeg
+  email: talley.amir@yale.edu
+  homepage: https://talleyamir.github.io/
+
+- name: Caleb Malchik
+  photo: calebmalchik.jpeg
+  email: caleb.malchik@yale.edu
+  homepage: https://cpsc.yale.edu/people/caleb-malchik
