--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ nav_pages:
   # - name: talks
   # - name: research
   # - name: software
-  - name: team
+  # - name: team
   - name: faculty
   - name: students
   - name: Alumni
