--- a/_data/faculty.yml
+++ b/_data/faculty.yml
@@ -42,5 +42,18 @@
   email: nisheeth.vishnoi [at] gmail.com  
   homepage: http://www.cs.yale.edu/homes/vishnoi/Home.html
 
+- name: Andre Wibisono
+  photo: andrewibisonoheadshot.png
+  info: Assistant Professor of Computer Science and Statistics & Data Science (secondary appointment)
+  interest:  the design and analysis of algorithms for machine learning, in particular for problems in optimization, sampling, and game dynamics.
+  email: andre.wibisono [at] yale.edu
+  homepage: http://www.cs.yale.edu/homes/wibisono/
 
+
+- name: Manolis Zampetakis
+  photo: manoliszampetakisheadshot.jpeg
+  info: Assistant Professor of Computer Science
+  interest: Theoretical Machine Learning, Statistics, Optimization, Computational Complexity, Game Theory, Mechanism Design.
+  email: emmanouil.zampetakis [at) yale.edu  
+  homepage: https://mzampet.com/
 
