--- a/_data/students.yml
+++ b/_data/students.yml
@@ -23,3 +23,8 @@
   photo: calebmalchik.jpeg
   email: caleb.malchik@yale.edu
   homepage: https://cpsc.yale.edu/people/caleb-malchik
+
+- name: Caleb Malchik
+  photo: calebmalchik.jpeg
+  email: caleb.malchik@yale.edu
+  homepage: https://cpsc.yale.edu/people/caleb-malchik
