--- a/_data/awards.yml
+++ b/_data/awards.yml
@@ -1,3 +1,19 @@
-- name: Example award here (2021)
-- name: Example award here (2020)
-
+- name: "20-year STOC Test of Time Award: Daniel Speilman (2021)"
+- name: "AAAS Fellow: Joan Feigenbaum (2012)"
+- name: "ACM Doctoral Dissertation Award winner: Daniel Spielman (1995)"
+- name: "ACM Fellows: Joan Feigenbaum (2001), Michael Fischer (1996), Daniel Spielman (2010), Nisheeth Vishnoi (2019)"
+- name: "Connecticut Academy of Science and Engineering Members: Joan Feigenbaum (2013) and Daniel Spielman (2011)"
+- name: "Connecticut Technology Council Woman of Innovation: Joan Feigenbaum (2012)"
+- name: "Dijkstra Prize winner: Michael Fischer (2001)"
+- name: "Fulkerson Prize winner: Daniel Spielman (2009)"
+- name: "Goedel Prize winner: Daniel Spielman (2008 and 2015)"
+- name: "ICM Invited Speakers: Joan Feigenbaum (1998) and Daniel Spielman (2002, 2010, 2014)"
+- name: "Information Theory Society Paper Award winner: Daniel Spielman (2002)"
+- name: "MacArthur Prize winner: Daniel Spielman (2012)"
+- name: "Michael and Sheila Held Prize: Daniel Spielman (2021)"
+- name: "National Academy of Sciences Member: Daniel Spielman (2016)"
+- name: "Nevanlinna Prize winner: Daniel Spielman (2010)"
+- name: "NSF CAREER Award: Daniel Spielman (1997), Yang Cai (2020)"
+- name: "Polya Prize winner: Daniel Spielman (2014)"
+- name: "Simons Investigator: Daniel Spielman (2012)"
+- name: "Sloan Research Fellowship: Daniel Spielman (1998), Yang Cai (2019)"
