--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
 title: Yale Theory Group
 # email: richard@university.edu
-description: Academic webpage of Dr. Richard Feynman
-baseurl: ""
-url: ""
+description: 
+baseurl: https://www.cs.yale.edu/theory
+url: https://www.cs.yale.edu/theory
 
 # Google analytics ID: Uncomment and your own, if you like
 # google_analytics: XX
@@ -35,6 +35,7 @@ nav_pages:
   # - name: team
   - name: faculty
   - name: students
+  - name: postdocs
   - name: Alumni
   - name: news
   - name: Awards and Honors
