--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Yale Theory Group
 # email: richard@university.edu
 description: 
-baseurl: https://www.cs.yale.edu/theory
+baseurl: 
 url: https://www.cs.yale.edu/theory
 
 # Google analytics ID: Uncomment and your own, if you like
