--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Yale Theory Group
 # email: richard@university.edu
 description: 
 baseurl: /theory
-url: https://www.cs.yale.edu
+url: "https://www.cs.yale.edu"
 
 # Google analytics ID: Uncomment and your own, if you like
 # google_analytics: XX
